# spare-net

./: Cargo.toml  README.md
.github/workflow/: ci.yml
crates/agent/: Cargo.toml  README.md
crates/agent/src/: agent.rs  connection.rs  deal.rs  discovery.rs  lib.rs  peer_info.rs
crates/cli/: Cargo.toml
