[package]
name    = "sparenet-agent"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio            = { version = "1", features = ["macros","rt-multi-thread"] }
libp2p           = { version = "0.55", features = ["mdns"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
thiserror        = "1"
serde_bytes = "0.11"