[package]
name    = "sparenet-agent"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.45.1", features = ["macros", "time", "test-util", "net"] }
libp2p           = { version = "0.55", features = ["mdns"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
thiserror        = "1"
serde_bytes = "0.11"
bincode = "1.3"
quinn = "0.11"
quinn-proto = "0.11.12"
rcgen = "0.13.2"
rustls  = "0.23.27"
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = "0.3"
